--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,3 +1,5 @@
-# Hi, I'm Your Name
+# Hi, I'm Puneet
 
-Template by [lekoarts.de](https://www.lekoarts.de?utm_source=cara&utm_medium=Starter) - I write about JavaScript and React there!
+A budding full stack cloud developer by profession. 
+Welcome to my portfolio !
+Scroll down to know more about me ...
