--- a/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/about.mdx
@@ -1,5 +1,10 @@
 ## About
 
-> The English language can not fully capture the depth and complexity of my thoughts. So I'm incorporating Emoji into my speech to better express myself. Winky face.
+>Puneet is very passionate about the web development industry and information technology. With a `constant learning` mindset, He is always 
+>eager to stay in tune with the latest and modern technologies.
 
-You know the way you feel when you see a picture of two otters holding hands? That's how you're gonna feel every day. My mother cried the day I was born because she knew she’d never be prettier than me. You should make me your campaign manager. I was born for politics. I have great hair and I love lying. Captain? The kids want to know where Paulie the Pigeon is. I told them he got sucked up into an airplane engine, is that all right?
+Puneet graduated in ECE from NIT-A and is a multidisciplinary developer who believes in using using innovation and technology to transform and impact the world for the greater good.
+
+He considers himself a well-organised person, problem solver and loves to work in a team on ambitious projects with the right people. He has been working on the front-end but he is very flexible with a lot of technologies like Javascript - NodeJS/React/Angular, Java, C++ etc.
+
+Besides programming, his hobbies are Music, Singing, Gardening, CrossFit, Travelling and Youtubing.
