--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,4 +1,4 @@
-# Hi, I'm Puneet
-# A budding full stack cloud developer by profession. 
-Welcome to my portfolio !
+# Hey, My name is Puneet Tiwari
+# I am a Full-Stack Developer by profession. 
+## Welcome to my portfolio !
 Scroll down to know more about me ...
