--- a/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/intro.mdx
@@ -1,4 +1,4 @@
 # Hey, My name is Puneet Tiwari
-# I am a Full-Stack Developer by profession. 
-## Welcome to my portfolio !
+## I am a Full-Stack Developer by profession. 
+### Welcome to my portfolio !
 Scroll down to know more about me ...
