--- a/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/contact.mdx
@@ -1,3 +1,3 @@
 ## Get in touch
 
-Visit [LinkedIn](https://www.linkedin.com/in/tiwaripuneet/) or find me on other platforms: [Github](https://github.com/Puneet-devworks), [BlogSpot](https://puneet-devdomain.blogspot.com/) [Medium](https://medium.com/@puneettiwari_36153), [SuperProf](https://www.superprof.ca/ir/20629705-6b7fb6), [Facebook](https://www.facebook.com/profile.php?id=100001567683256) and [YouTube](https://www.youtube.com/channel/UC3jt4UFm_0X_ZyJrf_i-h6w)
+Visit [LinkedIn](https://www.linkedin.com/in/tiwaripuneet/) or find me on other platforms: [Github](https://github.com/Puneet-devworks), [BlogSpot](https://puneet-devdomain.blogspot.com/), [Medium](https://medium.com/@puneettiwari_36153), [SuperProf](https://www.superprof.ca/ir/20629705-6b7fb6), [Facebook](https://www.facebook.com/profile.php?id=100001567683256) and [YouTube](https://www.youtube.com/channel/UC3jt4UFm_0X_ZyJrf_i-h6w)
