--- a/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
+++ b/src/@lekoarts/gatsby-theme-cara/sections/projects.mdx
@@ -1,32 +1,30 @@
 ## Projects
 
 <ProjectCard
-  title="Tips & Tricks for Gatsby"
-  link="https://www.lekoarts.de/gatsby/tips-and-tricks-for-gatsby?utm_source=cara&utm_medium=Theme"
+  title="Doctor Appointment Booking App"
+  link="https://github.com/Puneet-devworks/Doctor-Appointment-Booking.git"
   bg="linear-gradient(to right, #D4145A 0%, #FBB03B 100%)"
 >
-  A collection of short, but useful quick tips shared by me and the community
-  about Gatsby. From GraphQL over local development to deployment.
+  It is a SpringBoot Application using MSSQL and Thymeleaf with user and admin roles. It is currently providing appointment booking , payment , patient report and Doctor info related basic functionality.
 </ProjectCard>
 <ProjectCard
-  title="Setting  up a yarn Workspace"
-  link="https://www.lekoarts.de/javascript/setting-up-a-yarn-workspace-with-typescript-eslint-and-cypress?utm_source=cara&utm_medium=Theme"
+  title="Basic E-Commerce Website"
+  link="https://github.com/Puneet-devworks/Basic-E-Commerce.git"
   bg="linear-gradient(to right, #662D8C 0%, #ED1E79 100%)"
 >
-  A robust solution for multi-package repositories.
+  A simple and elegant website for E-Commerce solution. It is built using MEAN stack. Get in touch if you want to collaborate in developing this interesting project.
 </ProjectCard>
 <ProjectCard
-  title="Adding a Draft Feature to Gatsby"
-  link="https://www.lekoarts.de/garden/adding-a-draft-feature-to-gatsby?utm_source=cara&utm_medium=Theme"
+  title="Simple Chat Application"
+  link="https://github.com/Puneet-devworks/Demo-Chat-Application.git"
   bg="linear-gradient(to right, #009245 0%, #FCEE21 100%)"
 >
-  A solution with the createSchemaCustomization API.
+  A working Chat Application built using NodeJS with minimal coding.
 </ProjectCard>
 <ProjectCard
-  title="Theme UI Plugin for Figma"
-  link="https://www.lekoarts.de/design/introducing-the-theme-ui-plugin-for-figma?utm_source=cara&utm_medium=Theme"
+  title="Home Automation"
+  link="https://github.com/Puneet-devworks/HomeOS.git"
   bg="linear-gradient(to right, #D585FF 0%, #00FFEE 100%)"
 >
-  The Theme UI plugin for Figma allows for a workflow where Theme UI is the
-  starting point both for design & development.
+  An ongoing Home Automation Project to enable end user to control each home appliance with Mobile Application.
 </ProjectCard>
